# dsp-dev-board

./: TI_Codec.sch  codec.sch  dsp_dev_board-cache.lib  dsp_dev_board-rescue.lib  dsp_dev_board.kicad_pcb  dsp_dev_board.pro  dsp_dev_board.sch  dsp_dev_board_2layer.kicad_pcb  fp-lib-table  frankie.kicad_mod  frankie_solder_mask.kicad_mod  mcu.sch  sym-lib-table
TLV320AIC3105/: 2021-04-15_04-23-04.lib
TS-1187A-B-A-B/: SW_TS-1187A-B-A-B.kicad_mod  TS-1187A-B-A-B.lib
fab-v1/: dsp_dev_board-B_Cu.gbr  dsp_dev_board-B_Mask.gbr  dsp_dev_board-B_Paste.gbr  dsp_dev_board-B_SilkS.gbr  dsp_dev_board-Edge_Cuts.gbr  dsp_dev_board-F_Cu.gbr  dsp_dev_board-F_Mask.gbr  dsp_dev_board-F_Paste.gbr  dsp_dev_board-F_SilkS.gbr  dsp_dev_board-In1_Cu.gbr  dsp_dev_board-In2_Cu.gbr  dsp_dev_board-job.gbrjob  dsp_dev_board.drl
firmware/: Cargo.toml  memory.x
firmware/src/: main.rs
